<resources>
    <string name="app_name">ESN Challenge</string>
    <string name="title_highscores">High Scores</string>
    <string name="title_map">Map</string>
    <string name="title_profile">Profile</string>
    <string name="button_title_check">Check</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="create_account"><a href="https://challenge.esncz.org/setup">Create an account</a></string>
    <string name="login">Login</string>
    <string name="forgot_password"><a href="https://challenge.esncz.org/password/forgot">Forgot password?</a></string>
    <string name="erasmus_student_network">Erasmus Student Network</string>
    <string name="leaderboards">Leaderboards</string>
    <string name="settings">Settings</string>
    <string name="quick_links">Quick links</string>
    <string name="checkout_website"><a href="https://challenge.esncz.org">Check out official site</a></string>
    <string name="like_on_facebook">Like us on Facebook</string>
    <string name="follow_instagram"><a href="https://instagram.com/esnchallenge">Follow us on Instagram</a></string>
    <string name="about_app">About ESN challenge</string>
    <string name="rate_app"><u>Rate the app</u></string>
    <string name="share">Share with friends</string>
    <string name="contact_us"><a href="mailto:challenge@esncz.org">Contact us</a></string>
    <string name="terms_of_service"><a href="https://challenge.esncz.org/sign/terms">Terms of service</a></string>
    <string name="about_me">About me</string>
    <string name="email">Email</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="gender">Gender</string>
    <string name="university">University</string>
    <string name="esn_section">ESN section</string>
    <string name="checked_locations">Checked locations</string>
    <string name="logout">Logout</string>
    <string name="password">Password</string>
    <string name="open_settings">Open Settings</string>
    <string name="close_settings">Close Settings</string>
</resources>
